--- a/udp/Makefile
+++ b/udp/Makefile
@@ -8,6 +8,8 @@ ARCHIVES = $(wildcard lib/*.a)
 SRC_SVR = udp_svr.c
 SRC_CLI = udp_cli.c
 
+all: $(CLI) $(SVR)
+
 $(CLI): cli.o lib/libcommon.a
 	$(CC) -lm -o $@ $< -L ./lib -l common
 	rm $<
