--- a/np_assignment2/Makefile
+++ b/np_assignment2/Makefile
@@ -5,7 +5,7 @@ CLI=bin/client
 SVR=bin/server
 TST=bin/test
 PTHREAD=-pthread
-
+SW=-w
 
 
 all: directory libcalc $(CLI) $(SVR) $(TST) 	
@@ -17,50 +17,50 @@ directory:
 
 
 servermain.o: servermain.c protocol.h 
-	$(CC) $(DBG) -Wall -c servermain.c -I.
+	$(CC) -w $(DBG)  -c servermain.c -I.
 
 clientmain.o: clientmain.c protocol.h
-	$(CC) $(DBG) -Wall -c clientmain.c -I.
+	$(CC) -w $(DBG)  -c clientmain.c -I.
 
 main.o: main.cpp protocol.h
-	$(CC) -Wall -c main.cpp -I.
+	$(CC) -w  -c main.cpp -I.
 
 
 $(TST): main.o calcLib.o
-	$(CC) -L./ -Wall -o $@ main.o -ludp
+	$(CC) -L./  -o $@ main.o -ludp
 
 $(CLI): clientmain.o calcLib.o libudp 
-	$(CC) -L./ -Wall -o $@ clientmain.o  -ludp
+	$(CC) -L./  -o $@ clientmain.o  -ludp
 
 $(SVR): servermain.o calcLib.o libudp
-	$(CC) -L./  $(PTHREAD) -Wall -o $@ servermain.o  -ludp
+	$(CC) -L./  $(PTHREAD)  -o $@ servermain.o  -ludp
 
 
 udp_server.o: udp_server.c common.h
-	$(CC) -Wall -fPIC -c udp_server.c
+	$(CC)  -fPIC -c udp_server.c
 
 log.o: log.c common.h
-	$(CC) -Wall -fPIC -c log.c 
+	$(CC)  -fPIC -c log.c 
 
 
 read.o: read.c common.h
-	$(CC) -Wall -fPIC -c read.c
+	$(CC)  -fPIC -c read.c
 
 utils.o: utils.c common.h
-	$(CC) -Wall -fPIC -c $<;
+	$(CC)  -fPIC -c $<;
 
 accept.o: accept.c common.h
-	$(CC) -Wall -fPIC -c $<;
+	$(CC)  -fPIC -c $<;
 
 
 handler.o: handler.c common.h
-	$(CC) $(DBG) -Wall -fPIC -c $<;
+	$(CC) $(DBG)  -fPIC -c $<;
 
 libudp: udp_server.o log.o read.o utils.o calcLib.o accept.o  handler.o
 	ar -rc libudp.a  $^
 	rm $^ 
 calcLib.o: calcLib.c calcLib.h
-	$(CC) -Wall -fPIC -c calcLib.c
+	$(CC)  -fPIC -c calcLib.c
 
 libcalc: calcLib.o
 	ar -rc libcalc.a  calcLib.o
